--- a/index.html
+++ b/index.html
@@ -1,12 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Overtalk Embed Demo</title>
+    <!-- Link to Google Fonts for Roboto -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Roboto', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background-color: #f0f0f0;
+        }
 
-    <title>Overtalk embed demo</title>
-  </head>
-  <body>
-    <iframe src="https://overtalk.io/embed" allow=" microphone;" seamless width="320" height="640"></iframe>
-  </body>
+        .phone-frame {
+            width: 360px; /* Width of the phone frame */
+            height: 640px; /* Height of the phone frame */
+            border: 12px solid transparent; /* Transparent border to show gradient border */
+            border-radius: 36px; /* Rounded corners */
+            background-color: #fff;
+            position: relative;
+            overflow: hidden;
+            background-image: linear-gradient(white, white),
+                              radial-gradient(circle, 
+                                  #ff0066, /* Red */
+                                  #ffcc00, /* Yellow */
+                                  #00ccff, /* Light Blue */
+                                  #00ff00, /* Green */
+                                  #000000, /* Black */
+                                  #ff0066, /* Red (cycle back to the start color) */
+                                  #00ccff /* Light Blue (continue rotation) */
+                              ); /* Gradient border */
+            background-origin: border-box;
+            background-clip: content-box, border-box; /* Ensures gradient is applied to border */
+            animation: rotateGradient 4s infinite linear; /* Animate the gradient */
+        }
+
+        .phone-frame::before {
+            content: '';
+            position: absolute;
+            top: 12px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 60px;
+            height: 6px;
+            background-color: #333;
+            border-radius: 3px;
+        }
+
+        .phone-screen {
+            position: absolute;
+            top: 20px; /* Adjust based on the phone frame */
+            left: 10px; /* Adjust based on the phone frame */
+            right: 10px;
+            bottom: 10px;
+            background-color: #fff;
+            border-radius: 20px;
+            overflow: hidden;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+            border-radius: 20px;
+        }
+
+        @keyframes rotateGradient {
+            0% {
+                background-position: 0% 0%;
+                background-size: 200% 200%;
+            }
+            50% {
+                background-position: 100% 100%;
+                background-size: 200% 200%;
+            }
+            100% {
+                background-position: 0% 0%;
+                background-size: 200% 200%;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="phone-frame">
+        <div class="phone-screen">
+            <iframe src="https://overtalk.io/kkr" allow="microphone;" seamless></iframe>
+        </div>
+    </div>
+</body>
 </html>
