--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <body>
     <div class="phone-frame">
         <div class="phone-screen">
-            <iframe src="https://overtalk.io/kkr" allow="microphone;" seamless></iframe>
+            <iframe src="https://hello.vasanthv.me/kkr" allow="camera; microphone" seamless width="480" height="640" frameBorder="0"></iframe>
         </div>
     </div>
     <div class="footer">
